creating a sample directive and service

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,8 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/directives/jqtree.js"></script>
+    <script src="scripts/services/indexeddb.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
